Initialize R package structure and add DESCRIPTION, NAMESPACE, and README files; remove unnecessary .DS_Store files and update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
+.Rproj.user
 
-/geo_matching/dati/confini/extract_zip
-/geo_matching/dati/confini/zip
-*.rda
-/geo_matching/v.1.0.0/dati/confini/extract_zip
-/geo_matching/v.1.0.0/dati/confini
-geo_matching/v.1.0.0/dati/pilot_municipal_airquality_weather.csv
-geo_matching/v.1.0.0/dati/pilot_municipal_airquality_weather.zip
+man/hello.Rd
+R/hello.R
