--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,12 @@ Authors@R: c(
   )
 Description: More about what it does (maybe more than one line).
     Continuation lines should be indented.
+Depends:
+    sp,
+    spacetime,
+    sf,
+    RColorBrewer
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
