Update DESCRIPTION and enhance documentation for geomatching and idw2hr functions
- Rearranged package dependencies in DESCRIPTION file.
- Improved parameter descriptions and formatting in geomatching.R and its documentation.
- Added detailed documentation for idw2hr function, including parameters and examples.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,15 @@ Authors@R: c(
 Description: More about what it does (maybe more than one line).
     Continuation lines should be indented.
 Depends:
-    sp,
-    spacetime,
+    dplyr,
+    doParallel,
+    foreach,
+    gstat,
+    parallel,
+    RColorBrewer,
     sf,
-    RColorBrewer
+    sp,
+    spacetime
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
